🎨 Dark Mode border color mix percentage fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -924,8 +924,8 @@ and CONTRIBUTION page ↴
   --background-modifier-hover: rgba(0, 0, 0, 0.3);
   --background-modifier-active-hover: var(--color-d-gray-70);
   --background-modifier-border: var(--color-d-gray-80);
-  --background-modifier-border-hover: color-mix(in srgb, var(--color-d-gray-70) 60%, var(--color-d-gray-80));
-  --background-modifier-border-focus: color-mix(in srgb, var(--color-d-gray-70) 60%, var(--color-d-gray-80));
+  --background-modifier-border-hover: color-mix(in srgb, var(--color-d-gray-70) 40%, var(--color-d-gray-80));
+  --background-modifier-border-focus: color-mix(in srgb, var(--color-d-gray-70) 40%, var(--color-d-gray-80));
   --background-modifier-error-rgb: var(--color-red-rgb);
   --background-modifier-error: var(--color-d-red-40);
   --background-modifier-error-hover: var(--color-d-red-30);
