--- a/src/scss/10_foundations/_pmr-dark-theme.scss
+++ b/src/scss/10_foundations/_pmr-dark-theme.scss
@@ -184,8 +184,8 @@ and CONTRIBUTION page ↴
     --background-modifier-active-hover: var(--color-d-gray-70);
 
     --background-modifier-border: var(--color-d-gray-80);
-    --background-modifier-border-hover: color-mix(in srgb, var(--color-d-gray-70) 60%, var(--color-d-gray-80));
-    --background-modifier-border-focus: color-mix(in srgb, var(--color-d-gray-70) 60%, var(--color-d-gray-80));
+    --background-modifier-border-hover: color-mix(in srgb, var(--color-d-gray-70) 40%, var(--color-d-gray-80));
+    --background-modifier-border-focus: color-mix(in srgb, var(--color-d-gray-70) 40%, var(--color-d-gray-80));
 
     --background-modifier-error-rgb: var(--color-red-rgb);
     --background-modifier-error: var(--color-d-red-40);
